--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "gatsby-plugin-sharp": "1.6.48",
     "gatsby-plugin-sitemap": "1.2.25",
     "gatsby-remark-images": "1.5.67",
+    "gatsby-remark-relative-images": "0.2.0",
     "gatsby-source-filesystem": "1.5.39",
     "gatsby-transformer-remark": "1.7.44",
     "gatsby-transformer-sharp": "1.6.27",
