--- a/.drone.yml
+++ b/.drone.yml
@@ -1,11 +1,103 @@
 pipeline:
+
+# =======================================
+# Setup  ================================
+# =======================================
   install:
     image: node:carbon
     commands:
       - yarn install --frozen-lockfile
+    when:
+      event: [ pull_request , tag ]
 
+# =======================================
+# Tests =================================
+# =======================================
   test-lint:
     image: node:carbon
     group: test
     commands:
       - yarn test:lint
+    when:
+      event: [ pull_request , tag ]
+
+# =======================================
+# Tags Creation =========================
+# =======================================
+  # Build release
+  build-release:
+    image: node:carbon
+    commands:
+      - npm install --global gatsby-cli@1.1.58
+      - rm -rf .cache public
+      - gatsby build --prefix-paths
+      - echo "${DRONE_COMMIT_SHA}" > public/.commit
+    when:
+      event: [tag]
+
+  # Package release build
+  package-release:
+    group: packaging
+    image: fpfis/php56-dev
+    commands:
+      - tar -czC public -f ${DRONE_REPO_NAME}-${DRONE_TAG}.tar.gz .
+    when:
+      event: [tag]
+      
+  # Push release to Github
+  push-github-release:
+    image: plugins/github-release
+    files:
+      - ${DRONE_REPO_NAME}-${DRONE_TAG}.tar.gz
+    checksum:
+      - md5
+      - sha1
+      - sha256
+      - sha512
+    secrets: [ GITHUB_RELEASE_API_KEY ]
+    when:
+      event: [tag]
+      
+  # Trigger deploy event on Github
+  create-deploy-production:
+    image: fpfis/drone-plugin-github-deploy
+    state: create
+    deploy_environment: production
+    secrets: [ github_api_token ]
+    automerge: false
+    when:
+      event: [tag]
+    
+# =======================================
+# Deployment ============================
+# =======================================
+
+  # Download release from github and extract into build folder
+  download-github-release:
+    image: instrumentisto/rsync-ssh
+    commands:
+      - wget https://github.com/ec-europa/digitec-news/releases/download/${DRONE_TAG}/${DRONE_REPO_NAME}-${DRONE_TAG}.tar.gz
+      - wget https://github.com/ec-europa/digitec-news/releases/download/${DRONE_TAG}/sha1sum.txt
+      - sha1sum -c sha1sum.txt
+      - mkdir build
+      - tar zxvf ${DRONE_REPO_NAME}-${DRONE_TAG}.tar.gz -C build
+      - echo $(date +%s) > build/.timestamp
+    when:
+      event: deployment
+
+  # Deploy build folder into production
+  deploy-to-production:
+    image: drillster/drone-rsync
+    secrets: [ rsync_key , MGMT_IP ]
+    hosts: [ $MGMT_IP ]
+    user : fpfis
+    source: ./build/
+    target: /ec/local/home/fpfis/reference/php-clusters/multisite/production/cluster00/sources/static/digitec/info
+    script:
+        - export GIT_FPFIS_AUTHOR="Drone ec.deploy.fpfis.eu"
+        - cd /ec/local/home/fpfis/reference/php-clusters/multisite/production/cluster00/sources/static/digitec/info
+        - git add -A .
+        - git commit -m"Deployed ${DRONE_REPO_OWNER}/${DRONE_REPO_NAME}@${DRONE_TAG} from drone build ${DRONE_BUILD_NUMBER}." .
+        - git push 'nas-reference' 'master'
+    when:
+      event: deployment
