--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "gatsby-plugin-sitemap": "1.2.25",
     "gatsby-remark-images": "1.5.67",
     "gatsby-remark-relative-images": "0.2.0",
+    "gatsby-remark-responsive-iframe": "2.0.6",
     "gatsby-source-filesystem": "1.5.39",
     "gatsby-transformer-remark": "1.7.44",
     "gatsby-transformer-sharp": "1.6.27",
