--- a/package.json
+++ b/package.json
@@ -1,74 +1,98 @@
 {
   "private": true,
-  "name": "DIGITEC",
+  "name": "digitec-news",
   "description": "DIGITEC News website built with Gatsby",
   "author": "European Commission",
   "license": "EUPL-1.1",
-  "dependencies": {
-    "classnames": "2.2.6",
-    "gatsby": "1.9.273",
-    "gatsby-image": "1.0.54",
-    "gatsby-link": "1.6.45",
-    "gatsby-plugin-manifest": "1.0.27",
-    "gatsby-plugin-nprogress": "1.0.14",
-    "gatsby-plugin-offline": "1.0.18",
-    "gatsby-plugin-react-helmet": "2.0.11",
-    "gatsby-plugin-react-next": "1.0.11",
-    "gatsby-plugin-sharp": "1.6.48",
-    "gatsby-plugin-sitemap": "1.2.25",
-    "gatsby-remark-images": "1.5.67",
-    "gatsby-remark-relative-images": "0.2.0",
-    "gatsby-remark-responsive-iframe": "2.0.6",
-    "gatsby-source-filesystem": "1.5.39",
-    "gatsby-transformer-remark": "1.7.44",
-    "gatsby-transformer-sharp": "1.6.27",
-    "headroom.js": "0.9.4",
-    "intersection-observer": "0.5.1",
-    "lodash": "4.17.10",
-    "lodash-webpack-plugin": "0.11.5",
-    "mappy-breakpoints": "0.2.3",
-    "normalize.css": "8.0.0",
-    "object-fit-images": "3.2.4",
-    "prop-types": "15.6.2",
-    "react": "16.4.1",
-    "react-dom": "16.4.1",
-    "react-helmet": "5.2.0",
-    "react-overdrive": "0.0.10",
-    "uuid": "3.3.2"
-  },
-  "keywords": ["gatsby"],
   "main": "n/a",
+  "engines": {
+    "node": ">=12.0.0"
+  },
   "scripts": {
+    "clean": "gatsby clean",
     "start": "npm run develop",
     "build": "gatsby build",
     "build:prefixed": "gatsby build --prefix-paths",
     "develop": "gatsby develop",
     "lint:js": "eslint .",
+    "lint:scss": "stylelint \"./src/**/*.scss\"",
+    "lint": "run-p lint:*",
     "serve": "gatsby serve",
     "format": "prettier --write \"{gatsby-*.js,src/**/*.js}\"",
-    "test:lint": "npm run lint:js",
-    "test": "npm-run-all -p test:* -cn",
-    "lint-staged": "lint-staged",
-    "precommit": "lint-staged"
+    "test:lint": "npm run lint",
+    "test": "run-p test:* -cn"
+  },
+  "dependencies": {
+    "classnames": "2.2.6",
+    "gatsby": "2.20.2",
+    "gatsby-image": "2.3.0",
+    "gatsby-plugin-layout": "1.2.0",
+    "gatsby-plugin-manifest": "2.3.1",
+    "gatsby-plugin-nprogress": "2.2.0",
+    "gatsby-plugin-offline": "3.1.0",
+    "gatsby-plugin-react-helmet": "3.2.0",
+    "gatsby-plugin-sharp": "2.5.1",
+    "gatsby-plugin-sitemap": "2.3.0",
+    "gatsby-remark-images": "3.2.0",
+    "gatsby-remark-relative-images": "0.3.0",
+    "gatsby-remark-responsive-iframe": "2.3.0",
+    "gatsby-source-filesystem": "2.2.1",
+    "gatsby-transformer-remark": "2.7.0",
+    "gatsby-transformer-sharp": "2.4.1",
+    "headroom.js": "0.11.0",
+    "intersection-observer": "0.7.0",
+    "lodash": "4.17.15",
+    "lodash-webpack-plugin": "0.11.5",
+    "mappy-breakpoints": "0.2.3",
+    "normalize.css": "8.0.1",
+    "object-fit-images": "3.2.4",
+    "prop-types": "15.7.2",
+    "react": "16.13.1",
+    "react-dom": "16.13.1",
+    "react-helmet": "5.2.1",
+    "react-overdrive": "0.0.10",
+    "uuid": "7.0.2"
   },
   "devDependencies": {
-    "babel-eslint": "8.2.5",
-    "eslint": "4.19.1",
-    "eslint-config-airbnb": "16.1.0",
-    "eslint-config-prettier": "2.9.0",
-    "eslint-plugin-compat": "2.4.0",
-    "eslint-plugin-import": "2.13.0",
-    "eslint-plugin-jsx-a11y": "6.0.3",
-    "eslint-plugin-prettier": "2.6.1",
-    "eslint-plugin-react": "7.10.0",
-    "gatsby-plugin-sass": "1.0.26",
-    "husky": "0.14.3",
-    "lint-staged": "7.2.0",
-    "npm-run-all": "4.1.3",
-    "prettier": "1.13.7"
+    "babel-eslint": "10.1.0",
+    "eslint": "6.8.0",
+    "eslint-config-airbnb": "18.1.0",
+    "eslint-config-prettier": "6.10.1",
+    "eslint-plugin-compat": "3.5.1",
+    "eslint-plugin-import": "2.20.1",
+    "eslint-plugin-jsx-a11y": "6.2.3",
+    "eslint-plugin-prettier": "3.1.2",
+    "eslint-plugin-react": "7.19.0",
+    "gatsby-plugin-sass": "2.2.0",
+    "husky": "4.2.3",
+    "lint-staged": "10.0.8",
+    "node-sass": "4.13.1",
+    "npm-run-all": "4.1.5",
+    "prettier": "2.0.1",
+    "stylelint": "13.2.1",
+    "stylelint-config-css-modules": "2.2.0",
+    "stylelint-config-prettier": "8.0.1",
+    "stylelint-config-sass-guidelines": "7.0.0",
+    "stylelint-config-standard": "20.0.0",
+    "stylelint-order": "4.0.0",
+    "stylelint-scss": "3.16.0"
+  },
+  "husky": {
+    "hooks": {
+      "pre-commit": "lint-staged"
+    }
   },
   "lint-staged": {
-    "*.js": ["prettier --parser babylon --write", "eslint", "git add"],
-    "*.json": ["prettier --parser json --write", "git add"]
+    "*.{md,mdx,html,json,yml,yaml}": [
+      "prettier --write"
+    ],
+    "*.{js,jsx}": [
+      "prettier --write",
+      "eslint"
+    ],
+    "*.scss": [
+      "prettier --write",
+      "stylelint"
+    ]
   }
 }
