--- a/package.json
+++ b/package.json
@@ -66,6 +66,7 @@
     "gatsby-plugin-sass": "2.2.0",
     "husky": "4.2.3",
     "lint-staged": "10.0.8",
+    "netlify-cli": "2.40.0",
     "node-sass": "4.13.1",
     "npm-run-all": "4.1.5",
     "prettier": "2.0.1",
