--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
     "lodash": "4.17.15",
     "lodash-webpack-plugin": "0.11.5",
     "mappy-breakpoints": "0.2.3",
+    "node-fetch": "2.6.0",
     "normalize.css": "8.0.1",
     "object-fit-images": "3.2.4",
     "prop-types": "15.7.2",
